# agents-adk

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Analist_cv/: .env copy  agent.py  prompt.py
Cybersegurity_tutor/: .env.example  __init__.py  agent.py  prompt.py  tools.py  tools_tutorials.py
Cybersegurity_tutor/database/: __init__.py  agent_wrapper.py  examples.py  persistence.py  schema.sql
chat_agent/: .env.example  __init__.py  agent.py  prompt.py  tools.py
chat_agent/database/: __init__.py  agent_wrapper.py  examples.py  persistence.py  schema.sql
data/: README.md
pokedex_agent/: agent.py  prompt.py  tools.py
