[project]
name = "app"
version = "0.1.0"
description = "Este proyecto demuestra cómo integrar Google ADK (Agent Development Kit) con Ollama para crear aplicaciones conversacionales avanzadas que combinan lo mejor de ambos mundos."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.14.1",
    "litellm>=1.77.4",
    "requests>=2.32.0",
    "python-dotenv>=1.1.1",
]
